--- a/style.css
+++ b/style.css
@@ -22,5 +22,5 @@ div {
 
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {
-  font-style: ;
+  font-style:italic;
 }
